style.css
/*
  1. Use a more-intuitive box-sizing model.
*/
*,
*::before,
*::after {
  box-sizing: border-box;
}

/*
  2. Remove default margin
*/
* {
  margin: 0;
}

/*
  3. Allow percentage-based heights in the application
*/
html,
body {
  height: 100%;
}

/*
  Typographic tweaks!
  4. Add accessible line-height
  5. Improve text rendering
*/
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

/*
  6. Improve media defaults
*/
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

/*
  7. Remove built-in form typography styles
*/
input,
button,
textarea,
select {
  font: inherit;
}

/*
  8. Avoid text overflows
*/
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/*
  9. Create a root stacking context
*/
#root,
#__next {
  isolation: isolate;
}

.sticky-footer {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.sticky-footer__header,
.sticky-footer__footer {
  flex-shrink: 0;
  display: flex;
  justify-content: center;
  padding: 2rem;
  background-image: radial-gradient(
    circle farthest-corner at 10% 20%,
    rgba(90, 92, 106, 1) 0%,
    rgba(32, 45, 58, 1) 81.3%
  );
  color: white;
}

img {
  margin-left: 10px;
}

.sticky-footer__main {
  flex-grow: 1;
  display: flex;
  align-items: center;
}

/* Calculator Designing */
.calculator {
  font-family: Arial, sans-serif;
  background-color: #333;
  border: 1px solid #ccc;
  box-shadow: 0 0 40px 0px rgba(0, 0, 0, 0.15);
  border-radius: 12px;
  margin-inline: auto;
  overflow: hidden;
  width: 300px;
  padding: 10px;
}

.calculator__display {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  font-size: 2em;
  height: 3em;
  background-color: #f2f2f2;
  margin-bottom: 10px;
  border: 1px solid #ccc;
  border-radius: 5px;
  padding: 0 10px;
}

.calculator__keys {
  background-color: #999;
  display: grid;
  grid-gap: 1px;
  grid-template-columns: repeat(4, 1fr);
}

.calculator__keys > * {
  background-color: #fff;
  padding: 0.5em 1.25em;
  position: relative;
  text-align: center;
}

.calculator__keys button {
  font-size: 1.5em;
  border: none;
  background-color: #f2f2f2;
  color: #333;
  padding: 10px;
  cursor: pointer;
  transition: all 0.2s ease;
}

.calculator__keys button:hover {
  background-color: #ccc;
}

.calculator__keys .key--operator {
  background-color: #333;
  color: orangered;
  font-size: 1.5em;
}

.calculator__keys .key--operator:hover {
  background-color: #666;
}

.calculator__keys button:active {
  background-color: #999;
  color: #fff;
}

.key--equal {
  grid-column: -2;
  grid-row: 3 / span 3;
}

.key--del {
  grid-column: 4;
  grid-row: 2;
}

.calculator__keys button[data-action="decimal"] {
  font-size: 1.5em;
}

.calculator__keys button[data-action="clear"] {
  color: orangered;
}

.calculator__keys button[data-action="calculate"] {
  background-image: linear-gradient(
    to bottom,
    hsl(12.2, 98.7%, 70.6%),
    hsl(17.9, 100%, 60%)
  );
}

.calculator__keys button[data-action="calculate"]:hover {
  background-image: linear-gradient(
    to bottom,
    hsl(12.2, 98.7%, 70.6%),
    hsl(17.9, 100%, 70%)
  );
}

.calculator__keys button[data-action="delete"] {
  background-color: pink;
}

.calculator__keys button[data-action="delete"]:hover {
  background-color: hsl(350.4, 100%, 76.5%);
}

